---
source: alpm-db/tests/parse_errors.rs
description: "%NAME%\nfoo\n\n%VERSION%\n.!\n\n%BASE%\nfoo\n\n%DESC%\nVersion must follow pkgver[-pkgrel] rules\n\n%ARCH%\nx86_64\n\n%BUILDDATE%\n1733737242\n\n%INSTALLDATE%\n1733737243\n\n%PACKAGER%\nFoobar <foo@example.org>\n\n%SIZE%\n123\n"
expression: error
---
Parser failed with the following error:
parse error at line 5, column 1
  |
5 | .!
  | ^
invalid sections
expected a section in the database desc file
